syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

// Naming Server Interface of the DistLedger Service

message RegisterRequest {
    string name = 1;
    string qualifier = 2;
    string address = 3;
}

message RegisterResponse {
    int32 index = 4; 
}

message LookupRequest {
    string name = 1;
    string qualifier = 2;
    string address = 3;
}

message ServerEntry {
    string qualifier = 1;
    string address = 2;
}

message LookupResponse {
    repeated ServerEntry server = 1;
}

message DeleteRequest {
    string name = 1;
    string address = 2;
 }

 message DeleteResponse { }


service NamingServerService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc lookup(LookupRequest) returns (LookupResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
  }